deployment-prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod-cred-ns
  labels:
    name: prod-cred-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digittech-deployment
  namespace: prod-cred-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digittech-service
  template:
    metadata:
      labels:
        app: digittech-service
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: digittech-service
        image: swr.af-south-1.myhuaweicloud.com/cred-prod/digittech-service:15a8d16cacb23ad3b87debb80e5c3c962ad9e3ee
        imagePullPolicy: "IfNotPresent"
        ports:
          - containerPort: 3000
        # envFrom:
        #   - secretRef:
        #       name: digittech-secret
        resources:
          requests:
            cpu: 100m
            memory: 156Mi
          limits:
            cpu: 200m
            memory: 212Mi
      imagePullSecrets:
      - name: default-secret
---
apiVersion: v1
kind: Service
metadata:
  name: digittech-service
  namespace: prod-cred-ns
spec:
  type: NodePort # Change service type to NodePort
  selector:
    app: digittech-service
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    #nodePort: 30617 # Define a specific nodePort value (replace with desired port number)
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: digittech-ingress
 namespace: prod-cred-ns
 annotations:
   #cert-manager.io/cluster-issuer: letsencrypt-staging
   kubernetes.io/ingress.class: nginx
spec:
 ingressClassName: nginx
 tls:
 - hosts:
   - digitvanttechnology.com
   - www.digitvanttechnology.com
   #secretName: mp-staging-tls
   secretName: digittech
 rules:
 - host: digitvanttechnology.com
   http:
     paths:
     - pathType: Prefix
       path: /
       backend:
         service:
           name: digittech-service
           port:
             number: 3000
 - host: www.digitvanttechnology.com
   http:
     paths:
     - pathType: Prefix
       path: /
       backend:
         service:
           name: digittech-service
           port:
             number: 3000
